<resources>
    <string name="app_name">Trekkin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_community">Community</string>
    <string name="title_account">Account</string>
    <string name="post_layout_title">shared a post!</string>
    <string name="new_to_trekkin_register_here_bottom_textview_text">New to Trekkin? Register here</string>
    <string name="login_button_text">Login</string>
    <string name="login_top_textview_header">Login</string>
    <string name="email_textview_login_activity">Email</string>
    <string name="password_textview_login_activity">Password</string>
    <string name="registration_top_textview_header">Registration</string>
    <string name="full_name_textview_registration_activity">Full name</string>
    <string name="email_address_textview_registration_activity">Email Address</string>
    <string name="phone_textview_registration_activity">Phone</string>
    <string name="password_textview_registration_activity">Password</string>
    <string name="username_textview_registration_activity">Username</string>
    <string name="date_of_birth_textview_registration_activity">Date of Birth</string>
    <string name="register_button_text">Register</string>
    <string name="registered_already_login_here_textview_registration_activity">Registered Already? Login here</string>
    <string name="community_tab_friends">Friends</string>
    <string name="community_tab_groups">Groups</string>
    <string name="person_name_textview_text">Person Name</string>
    <string name="group_name_textview_text">Group Name</string>
    <string name="logout_button_text">Logout</string>
    <string name="explore_favourite_tab">Favourite</string>
    <string name="explore_suggested_tab">Suggested</string>
</resources>